# freenetconfd-plugin-dt-status

./: .gitignore  CMakeLists.txt
netconf/: get.js
src/: config.c  config.h  status.c
yang/: status@2015-12-1.yang
